--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
 # Site Info
-title:              "The Plain"
-description:        "The Plain is a minimalist Jekyll theme, that's it. Can't say anymore..."
-google_verify:      epFgX0s_0RM3CdjwFcsewfXzPov2g8s9ZBOLyaIUH-o # Put your Google Verification here
-google_analytics:   UA-XXXXXXX-X # Put your Google Analytics code
+title:              "Togayther"
+description:        "you can put your site description in here, i cant tell you more.."
 
 # Author Info
-author_name:        "TOGAYTHER" # Your name here
+author_name:        "Togayther" # Your name here
 author_email:       sleepsleepsleep@foxmail.com # Your email here
 twitter_username:   togayther # Your Twitter username here
 github_username:    togayther # Your GitHub username here
